# GearMeshing-AI

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: ci.yaml  docker-ci.yml  docs-automerge.yml  rw_build_and_test.yaml  rw_run_all_test_and_record.yaml
examples/type_checking/: README.md
gearmeshing_ai/: types.py
gearmeshing_ai/agent/abstraction/: factory.py  mcp.py  settings.py
gearmeshing_ai/agent/abstraction/tools/: security.py
gearmeshing_ai/agent/adapters/: pydantic_ai.py
gearmeshing_ai/agent/mcp/: __init__.py
gearmeshing_ai/agent/mcp/client/: exceptions.py  transports.py
gearmeshing_ai/agent/mcp/gateway/: client.py
gearmeshing_ai/agent/orchestrator/: __init__.py  approval.py  approval_workflow.py  engine.py  exceptions.py  executor.py  models.py  persistence.py  service.py
gearmeshing_ai/agent/orchestrator/backends/: __init__.py  base.py  database.py  local.py  redis.py
gearmeshing_ai/agent/roles/: __init__.py  loader.py  registry.py  selector.py  service.py
gearmeshing_ai/agent/roles/config/: __init__.py  default_roles_config.yaml
gearmeshing_ai/agent/roles/models/: __init__.py  role_definition.py
gearmeshing_ai/agent/runtime/: approval_manager.py  capability_registry.py  hitl_coordinator.py  langgraph_workflow.py  monitoring.py  performance.py  policy_engine.py
gearmeshing_ai/agent/runtime/models/: __init__.py  node_returns.py  workflow_state.py  workflow_states.py
gearmeshing_ai/agent/runtime/nodes/: agent_decision.py  approval_workflow.py  policy_validation.py  result_processing.py
gearmeshing_ai/agent_core/abstraction/: __init__.py  adapter.py  cache.py  env_manager.py  factory.py  mcp.py  settings.py
gearmeshing_ai/agent_core/abstraction/tools/: __init__.py  definitions.py  handlers.py  security.py
gearmeshing_ai/agent_core/adapters/: __init__.py  pydantic_ai.py
gearmeshing_ai/agent_core/mcp/: __init__.py
gearmeshing_ai/agent_core/mcp/client/: __init__.py  config.py  core.py  exceptions.py  factory.py  monitoring.py  pool.py  transports.py
gearmeshing_ai/agent_core/mcp/gateway/: __init__.py  client.py  errors.py
gearmeshing_ai/agent_core/models/: __init__.py  actions.py
gearmeshing_ai/agent_core/runtime/: __init__.py  approval_manager.py  capability_registry.py  langgraph_workflow.py  node_returns.py  policy_engine.py  workflow_state.py  workflow_states.py
gearmeshing_ai/agent_core/runtime/models/: __init__.py  node_returns.py  workflow_state.py  workflow_states.py
gearmeshing_ai/agent_core/runtime/nodes/: __init__.py  agent_decision.py  approval_check.py  approval_workflow.py  capability_discovery.py  completion_check.py  error_handler.py  policy_validation.py  result_processing.py
gearmeshing_ai/command_line/: README.md  __init__.py  app.py
gearmeshing_ai/command_line/commands/: server.py  system.py
gearmeshing_ai/command_line/services/: agent_service.py  server_service.py  system_service.py
gearmeshing_ai/command_line/subcmd/: agent.py  server.py  system.py
gearmeshing_ai/core/models/: setting.py
gearmeshing_ai/core/models/io/: README.md  __init__.py  common.py  utils.py
gearmeshing_ai/core/utils/: logging_config.py
gearmeshing_ai/restapi/: README.md  __init__.py  main.py
gearmeshing_ai/restapi/dependencies/: __init__.py  health.py
gearmeshing_ai/restapi/routers/: __init__.py  health.py
gearmeshing_ai/restapi/routers/internal/: __init__.py
gearmeshing_ai/restapi/service/: __init__.py  health.py
gearmeshing_ai/scheduler/: __init__.py
gearmeshing_ai/scheduler/activities/: __init__.py  action_execute.py  ai_workflow.py  base.py  data_fetch.py
gearmeshing_ai/scheduler/checking_points/: __init__.py  base.py  registry.py
gearmeshing_ai/scheduler/checking_points/clickup/: __init__.py  assignment.py  base.py  overdue_tasks.py  urgent_tasks.py
gearmeshing_ai/scheduler/checking_points/custom/: __init__.py  base.py  email_alerts.py
gearmeshing_ai/scheduler/checking_points/slack/: __init__.py  base.py  bot_mentions.py
gearmeshing_ai/scheduler/config/: __init__.py  loader.py  settings.py
gearmeshing_ai/scheduler/models/: __init__.py  base.py  checking_point.py  config.py  monitoring.py  workflow.py
gearmeshing_ai/scheduler/prompts/: __init__.py  loader.py  registry.py
gearmeshing_ai/scheduler/temporal/: __init__.py  client.py  schedules.py  worker.py
gearmeshing_ai/scheduler/utils/: __init__.py  health.py  metrics.py
gearmeshing_ai/scheduler/workflows/: __init__.py  ai_executor.py  base.py  monitoring.py
scripts/docker/: run-server.sh
test/: .env.example  conftest.py  docker-compose.yml  settings.py  test_settings.py
test/ai_smoke_test/agent/abstraction/: README.md  test_abstraction_smoke.py
test/ai_smoke_test/agent/adapters/: conftest.py  test_proposal_smoke.py
test/ai_smoke_test/agent/orchestrator/: README.md  __init__.py  conftest.py  test_approval_workflows.py  test_basic_workflows.py  test_mcp_integration.py
test/ai_smoke_test/agent_core/abstraction/: conftest.py  test_abstraction_smoke.py
test/ai_smoke_test/agent_core/adapters/: conftest.py  test_proposal_smoke.py
test/contract_test/agent/abstraction/: test_mcp.py
test/contract_test/agent_core/abstraction/: test_adapter.py  test_mcp.py
test/e2e_test/agent/: test_pydantic_ai_tools_e2e.py  test_tools_e2e.py
test/e2e_test/agent/mcp/: conftest.py  test_mcp_gateway_e2e.py
test/e2e_test/agent/orchestrator/: __init__.py  (+2 more)
test/e2e_test/agent_core/: test_pydantic_ai_tools_e2e.py  test_tools_e2e.py
test/e2e_test/command_line/: test_cli_e2e.py
test/e2e_test/restapi/: test_e2e.py
test/integration_test/agent/: test_proposal_system_integration.py
test/integration_test/agent_core/: test_proposal_system_integration.py
test/integration_test/command_line/: __init__.py  conftest.py  test_cli_integration.py
test/integration_test/restapi/: test_integration.py
test/unit_test/command_line/: __init__.py  conftest.py  test_app.py
test/unit_test/restapi/: test_main.py
(+207 files in other folders)
